--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <p class="info">Para concluir a proteção em tempo real e garantir estabilidade durante sua navegação, realize a autenticação abaixo:</p>
 
   <p class="info">
-    🟡 <span class="bold">Valor único de verificação: R$ 2,90</span>
+    <span class="bold">Valor único de verificação: R$ 2,90</span>
   </p>
 
   <p style="font-size: 13px;">(IA Protect opera por menos de $0.55 USD internacionalmente)</p>
