--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <p class="info">O navegador <span class="bold" id="browser-name">detectando...</span> ativou automaticamente o protocolo <span class="bold">IA Protect Pro®</span>, com tecnologia baseada em Inteligência Artificial.</p>
 
-  <p class="info">Para concluir a proteção em tempo real e garantir estabilidade durante sua navegação, realize a autenticação abaixo:</p>
+  <p class="info">Para concluir a proteção em tempo real e garantir segurança durante sua navegação, realize a autenticação abaixo:</p>
 
   <p class="info">
     <span class="bold">Valor único de verificação: R$ 2,90</span>
